Bug 233524 - cannot add tags to emails through filters
Summary: cannot add tags to emails through filters
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: filtering (other bugs)
Version First Reported In: 1.13.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-06 19:04 UTC by Ritesh Raj Sarraf
Modified: 2012-12-05 20:57 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ritesh Raj Sarraf 2010-04-06 19:04:39 UTC
Version:           1.13.2 (using 4.4.2 (KDE 4.4.2), Debian packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.32-4-amd64

So I create a bunch of rules "Filters" where in I mention that if a certain condition meets, try to "Tag" the message. But it looks like the tagging is not done. If I manually tag a message, it gets tagged.


I can confirm that this is a bug as the subject described, because when I add a 2nd action to the same rule, the 2nd action (which in my case is to move the message to a different folder) does get executed.
Comment 1 Yann Neveu 2012-12-05 13:16:20 UTC
Same problem here (kde 4.10 beta2 on archlinux). It seems that in ~/.kde4/share/config/akonadi_mailfilter_agentrc , action-args-0 attribute is empty:

[Filter #1]
Applicability=0
AutomaticName=true
ConfigureShortcut=false
ConfigureToolbar=false
Enabled=true
Icon=system-run
StopProcessingHere=true
ToolbarName=<To>: bureautique.boulogne@ccmbenchmark.com
action-args-0=
action-name-0=add tag
actions=1
apply-on=check-mail,manual-filtering
contentsA=xxx@example.com
contentsB=yyy@example.com
fieldA=To
fieldB=CC
funcA=contains
funcB=contains
identifier=TORHjDEwPZ1kF21S
name=<To>: zzz@example.com
operator=or
rules=2

Filter was created using kmail filter edition. But it seems that there is a problem in filter creation. When you chosse the tat you want to be applied to filtered mail. Click on apply, the dropbox will be resetted to first choice in the list...
Comment 2 Laurent Montel 2012-12-05 13:49:36 UTC
yes it's right in 4.9.4 too...
will fix soon
Comment 3 Laurent Montel 2012-12-05 20:57:08 UTC
Git commit 690fc0be681e2307b7eb86d746b0bcc7e3fb1dfd by Montel Laurent.
Committed on 05/12/2012 at 21:56.
Pushed by mlaurent into branch 'master'.

Fix Bug 233524 - cannot add tags to emails through filters

It was never works. List was always empty

Don't call query each time that we apply a filter
FIXED-IN: 4.10

M  +7    -31   mailcommon/filter/filteractionaddtag.cpp
M  +1    -4    mailcommon/filter/filteractionaddtag.h
M  +69   -1    mailcommon/filter/filtermanager.cpp
M  +16   -0    mailcommon/filter/filtermanager.h

http://commits.kde.org/kdepim/690fc0be681e2307b7eb86d746b0bcc7e3fb1dfd