Fix Bug 233524 - cannot add tags to emails through filters

It was never works. List was always empty

Don't call query each time that we apply a filter
FIXED-IN: 4.10
BUG: 233524