mailcommon/filter/filteractionaddtag.cpp
@@ -18,7 +18,7 @@
  */
 
 #include "filteractionaddtag.h"
-
+#include "filtermanager.h"
 #include "filteractionmissingargumentdialog.h"
 
 #include <Nepomuk2/Tag>
@@ -41,7 +41,8 @@ FilterAction* FilterActionAddTag::newAction()
 FilterActionAddTag::FilterActionAddTag( QObject *parent )
   : FilterActionWithStringList( "add tag", i18n( "Add Tag" ), parent )
 {
-  initializeTagList();
+    mParameterList = FilterManager::instance()->tagList();
+    connect(FilterManager::instance(),SIGNAL(tagListingFinished()),SLOT(slotTagListingFinished()));
 }
 
 bool FilterActionAddTag::isEmpty() const
@@ -49,34 +50,10 @@ bool FilterActionAddTag::isEmpty() const
   return false;
 }
 
-void FilterActionAddTag::initializeTagList()
+void FilterActionAddTag::slotTagListingFinished()
 {
-  mTagQueryClient = new Nepomuk2::Query::QueryServiceClient(this);
-  connect( mTagQueryClient, SIGNAL(newEntries(QList<Nepomuk2::Query::Result>)),
-           this, SLOT(newTagEntries(QList<Nepomuk2::Query::Result>)) );
-  connect( mTagQueryClient, SIGNAL(finishedListing()),
-           this, SLOT(finishedTagListing()) );
-
-  Nepomuk2::Query::ResourceTypeTerm term( Soprano::Vocabulary::NAO::Tag() );
-  Nepomuk2::Query::Query query( term );
-  mTagQueryClient->query(query);
- }
-
-void FilterActionAddTag::newTagEntries( const QList<Nepomuk2::Query::Result> &results )
-{
-  foreach(const Nepomuk2::Query::Result &result, results ) {
-    Nepomuk2::Resource resource = result.resource();
-    mParameterList.append( resource.label() );
-    mLabelList.append( resource.uri().toString( ));
-  }
+  mParameterList = FilterManager::instance()->tagList();
 }
-
-void FilterActionAddTag::finishedTagListing()
-{
-  mTagQueryClient->deleteLater();
-  mTagQueryClient = 0;
-}
-
 
 bool FilterActionAddTag::argsFromStringInteractive( const QString &argsStr, const QString& filterName )
 {
@@ -102,7 +79,6 @@ FilterAction::ReturnCode FilterActionAddTag::process( ItemContext &context ) con
   const int index = mParameterList.indexOf( mParameter );
   if ( index == -1 )
     return ErrorButGoOn;
-
   Nepomuk2::Resource resource( context.item().url() );
   resource.addTag( mParameter );
 
@@ -120,7 +96,6 @@ void FilterActionAddTag::argsFromString( const QString &argsStr )
     mParameter = argsStr;
     return;
   }
-
   foreach ( const QString& tag, mParameterList ) {
     if ( tag == argsStr ) {
       mParameter = tag;
@@ -135,8 +110,9 @@ void FilterActionAddTag::argsFromString( const QString &argsStr )
 QString FilterActionAddTag::argsAsString() const
 {
   const int index = mParameterList.indexOf( mParameter );
-  if ( index == -1 )
+  if ( index == -1 ) {
     return QString();
+  }
 
   return mParameterList.at( index );
 }
